// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Save session component should render with no support for indexeddb storage 1`] = `
<div
  className="panel__save-session"
>
  <Input
    disabled={false}
    onChange={[Function]}
    placeholder="Session name"
    prefixCls="ant-input"
    type="text"
    value="test"
  />
  <div
    className="panel__save-session__grid"
  >
    <div>
      Save to file
    </div>
    <Button
      className="panel__save-button"
      disabled={false}
      onClick={[Function]}
      theme="default"
      type="button"
    >
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              384,
              512,
              Array [],
              "f56d",
              "M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm76.45 211.36l-96.42 95.7c-6.65 6.61-17.39 6.61-24.04 0l-96.42-95.7C73.42 337.29 80.54 320 94.82 320H160v-80c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v80h65.18c14.28 0 21.4 17.29 11.27 27.36zM377 105L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128v-6.1c0-6.3-2.5-12.4-7-16.9z",
            ],
            "iconName": "file-download",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </Button>
  </div>
</div>
`;

exports[`Save session component should render with support for indexeddb storage but no sessions saved 1`] = `
<div
  className="panel__save-session"
>
  <Input
    disabled={false}
    onChange={[Function]}
    placeholder="Session name"
    prefixCls="ant-input"
    type="text"
    value="test"
  />
  <div
    className="panel__save-session__grid"
  >
    <div>
      Save to file
    </div>
    <Button
      className="panel__save-button"
      disabled={false}
      onClick={[Function]}
      theme="default"
      type="button"
    >
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              384,
              512,
              Array [],
              "f56d",
              "M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm76.45 211.36l-96.42 95.7c-6.65 6.61-17.39 6.61-24.04 0l-96.42-95.7C73.42 337.29 80.54 320 94.82 320H160v-80c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v80h65.18c14.28 0 21.4 17.29 11.27 27.36zM377 105L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128v-6.1c0-6.3-2.5-12.4-7-16.9z",
            ],
            "iconName": "file-download",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </Button>
  </div>
</div>
`;

exports[`Save session component with indexeddb storage and sessions present should render 1`] = `
<div
  className="panel__save-session"
>
  <Input
    disabled={false}
    onChange={[Function]}
    placeholder="Session name"
    prefixCls="ant-input"
    type="text"
    value="test"
  />
  <div
    className="panel__save-session__grid"
  >
    <div>
      Save to file
    </div>
    <Button
      className="panel__save-button"
      disabled={false}
      onClick={[Function]}
      theme="default"
      type="button"
    >
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              384,
              512,
              Array [],
              "f56d",
              "M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm76.45 211.36l-96.42 95.7c-6.65 6.61-17.39 6.61-24.04 0l-96.42-95.7C73.42 337.29 80.54 320 94.82 320H160v-80c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v80h65.18c14.28 0 21.4 17.29 11.27 27.36zM377 105L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128v-6.1c0-6.3-2.5-12.4-7-16.9z",
            ],
            "iconName": "file-download",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </Button>
    <React.Fragment>
      <div>
        Save to browser
      </div>
      <Button
        className="panel__save-button"
        disabled={false}
        onClick={[Function]}
        theme="default"
        type="button"
      >
        <FontAwesomeIcon$1
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f37e",
                "M464 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM128 148c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40zm320 0c0 6.6-5.4 12-12 12H188c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h248c6.6 0 12 5.4 12 12v40z",
              ],
              "iconName": "browser",
              "prefix": "fas",
            }
          }
          listItem={false}
          mask={null}
          name=""
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          transform={null}
        />
      </Button>
    </React.Fragment>
  </div>
</div>
`;
